--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
 
     <aside id="sidebar">
+        <button id="sidebar-toggle" class="nav-btn" style="padding:6px 10px; font-size:1rem; text-align: center;" onclick="toggleSidebar()">☰</button>
         <div class="logo-area">
-            <h2><i class="fas fa-graduation-cap"></i>AkumaV Exam Master</h2>
+            <div style="display:flex; align-items:center; justify-content:space-between;">
+                <h2 style="margin:0;"><i class="fas fa-graduation-cap"></i>AkumaV Exam Master</h2>
+            </div>
             <p>OODP & IWT Revision Portal</p>
         </div>
 
@@ -73,7 +76,10 @@
     <main id="main-display">
 
         <header>
-            <h1 id="page-title">Study Schedule</h1>
+            <div style="display:flex; align-items:center; gap:12px;">
+                <button id="mobile-sidebar-toggle" onclick="toggleSidebar()" aria-label="Toggle sidebar">☰</button>
+                <h1 id="page-title">Study Schedule</h1>
+            </div>
             <div id="progress-container" style="display:none;">
                 <span>Session Progress:</span>
                 <div class="progress-bar">
