Update with the Tips from senior CSIT121

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <button class="nav-btn" onclick="renderTips()">
                     <i class="fas fa-lightbulb"></i> Exam Tips & Hints
                 </button>
+                <a class="nav-btn" href="tips.html" style="display:block; margin-top:6px; padding:8px; text-align:left;">🔖 Hee Siang Tips (page)</a>
             </div>
 
             <div class="nav-section py-section">
@@ -79,6 +80,9 @@
             <div style="display:flex; align-items:center; gap:12px;">
                 <button id="mobile-sidebar-toggle" onclick="toggleSidebar()" aria-label="Toggle sidebar">☰</button>
                 <h1 id="page-title">Study Schedule</h1>
+            </div>
+            <div style="display:flex;gap:8px;align-items:center">
+                <a href="tips.html" class="nav-btn" style="padding:6px 10px;">Hee Siang Tips (page)</a>
             </div>
             <div id="progress-container" style="display:none;">
                 <span>Session Progress:</span>
