--- a/tips.html
+++ b/tips.html
@@ -199,10 +199,19 @@ print(a.x)</code></pre></div>
 				<div class="prompt"><p>Outline a function that checks whether two lists contain the same elements (order not important).</p></div>
 				<p><b>Expected answer format:</b> short code snippet or one-line description</p>
 				<button class="show-answer-btn show-btn">Show answer</button>
-				<div class="answer"><pre><code>from collections import Counter
-
-def same_elements(a, b):
-		return Counter(a) == Counter(b)</code></pre></div>
+				<div class="answer"><pre><code>class Checking_list():
+    def __init__(self, list1, list2):
+        self.aList = list1
+        self.bList = list2
+        
+    def same_element_checking(self):
+        A_list = sorted(self.aList)
+        B_list = sorted(self.bList)
+        
+        if A_list == B_list:
+            return True
+        else:
+            return False</code></pre></div>
 			</article>
 
 			<article class="qa" id="q4">
